exercises/ARM/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
      "team_name": {
        "type": "string",
        "metadata": {
          "description": "Name of the team"
        }
      },
      "user_id": {
        "type": "string",
        "metadata": {
          "description": "User ID"
        }
      }
    },
    "variables": {
      "vnetName": "[concat('vnet-', parameters('team_name'), '-', parameters('user_id'))]",
      "vnetAddressSpace": "10.0.0.0/16",
      "subnetName": "[concat('snet-', parameters('team_name'), '-', parameters('user_id'))]",
      "subnetAddressPrefix": "10.0.1.0/24",
      "public_ip_name": "[concat('pip-', parameters('team_name'), '-', parameters('user_id'))]",
      "nsg_name": "[concat('nsg-', parameters('team_name'), '-', parameters('user_id'))]",
      "nic_name": "[concat('nic-', parameters('team_name'), '-', parameters('user_id'))]",
      "nginxScript": {
        "scriptUri": "https://raw.githubusercontent.com/Azure/azure-linux-extensions/master/CustomScriptExtension/nginx/install_nginx.sh",
        "commandToExecute": "./install_nginx.sh"
      }
    },
    "resources": [
      {
        "type": "Microsoft.Network/virtualNetworks",
        "apiVersion": "2022-03-01",
        "name": "[variables('vnetName')]",
        "location": "[resourceGroup().location]",
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "[variables('vnetAddressSpace')]"
            ]
          }
        }
      },
      {
        "type": "Microsoft.Network/virtualNetworks/subnets",
        "apiVersion": "2022-03-01",
        "name": "[concat(variables('vnetName'), '/subnets/', variables('subnetName'))]",
        "dependsOn": [
          "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]"
        ],
        "properties": {
          "addressPrefix": "[variables('subnetAddressPrefix')]"
        }
      },
      {
        "type": "Microsoft.Network/publicIPAddresses",
        "apiVersion": "2022-03-01",
        "name": "[variables('public_ip_name')]",
        "location": "[resourceGroup().location]",
        "properties": {
          "publicIPAllocationMethod": "Dynamic"
        }
      },
      {
        "type": "Microsoft.Network/networkSecurityGroups",
        "apiVersion": "2022-03-01",
        "name": "[variables('nsg_name')]",
        "location": "[resourceGroup().location]",
        "properties": {
          "securityRules": [
            {
              "name": "SSH",
              "properties": {
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1001,
                "direction": "Inbound"
              }
            },
            {
              "name": "HTTP",
              "properties": {
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1002,
                "direction": "Inbound"
              }
            }
          ]
        }
      },
      {
        "type": "Microsoft.Network/networkInterfaces",
        "apiVersion": "2022-03-01",
        "name": "[variables('nic_name')]",
        "location": "[resourceGroup().location]",
        "dependsOn": [
          "[resourceId('Microsoft.Network/publicIPAddresses', variables('public_ip_name'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg_name'))]",
          "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]"
        ],
        "properties": {
          "ipConfigurations": [
            {
              "name": "ipconfig1",
              "properties": {
                "subnet": {
                  "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), variables('subnetName'))]"
                },
                "publicIPAddress": {
                  "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('public_ip_name'))]"
                }
              }
            }
          ]
        }
      },
      {
        "type": "Microsoft.Compute/virtualMachines/extensions",
        "apiVersion": "2022-03-01",
        "name": "[concat(variables('nic_name'), '/Setup')]",
        "location": "[resourceGroup().location]",
        "dependsOn": [
          "[resourceId('Microsoft.Compute/virtualMachines', variables('nic_name'))]"
        ],
        "properties": {
          "publisher": "Microsoft.Azure.Extensions",
          "type": "CustomScript",
          "typeHandlerVersion": "2.1",
          "autoUpgradeMinorVersion": true,
          "settings": {},
          "protectedSettings": {
            "scriptUris": [
              "[variables('nginxScript').scriptUri]"
            ],
            "commandToExecute": "[variables('nginxScript').commandToExecute]"
          }
        }
      }
    ],
    "outputs": {
      "nicName": {
        "type": "string",
        "value": "[variables('nic_name')]"
      }
    }
  }
